syntax = "proto3";

package topupend;

service InitSam {
    rpc Init (InitRequest) returns (InitResponse) {}
}

message InitRequest {
    string c_card = 1;
}

message InitResponse {
    string message = 1;
    int32 statusCode = 2;
}